# ojdk-applet

./: .gitignore  LICENSE  OPLauncher-Builder.ps1  OPLauncherInstaller.wxs  README.md  TOOLING_MSVCCOMPPATH  TOOLING_MSVCPATH  TOOLING_WiXPATH  build.cfg
chrome-ext/: applet-dom-controller.js  applet-injector.js  applet.js  appletint.js  background.js  conn-background.js  manifest.json  org.oplauncher.applet_service.json  resources.js  settings.html  settings.js
oplauncher/: .gitignore  CMakeLists.txt  README.MD  applet.policy  chrome_ext_comm.h  createBuildFiles4Mac.sh  createBuildFiles4Windows.bat  errcodes.h  ini_config.c  ini_config.h  iohelper.c  iohelper.h  jvm_launcher.c  jvm_launcher.h  logging.c  logging.h  main.c  op_server.c  op_server.h  oplauncher.c  oplauncher.h  oplauncher_secur.c  oplauncher_secur.h  oplauncher_win_reg.c  oplauncher_win_reg.h  utils.c  utils.h
oplauncher-pilot/: .gitignore  pom.xml
oplauncher-pilot/oplauncher-pilot/: pom.xml
oplauncher-pilot/src/main/java/org/oplauncher/: AbstractAppletClassLoader.java  AppletClassLoader.java  AppletController.java  AppletParameters.java  ArchiveClassLoaderType.java  CommunicationParameterHelper.java  CommunicationParameterParser.java  ConfigurationHelper.java  ConstantsConfig.java  DefaultAppletContext.java  ErrorCode.java  IAppletClassLoader.java  IConstants.java  OPLauncherController.java  OPLauncherDispatcher.java  OPLauncherDispatcherPool.java  OPLauncherException.java  OpCode.java  OpHelper.java
oplauncher-pilot/src/main/java/org/oplauncher/load/: SplashScreen.java
oplauncher-pilot/src/main/java/org/oplauncher/op/: HttpOPServer.java  OPCallback.java  OPHandler.java  OPHttpHBHandler.java  OPHttpHandler.java  OPMessage.java  OPPayload.java  OPPayloadDeserializer.java  OPPlainPayload.java  OPResponse.java  OPSecurePayload.java  OPServer.java  OPServerFactory.java  OPServerType.java  WebSocket2OPServer.java
oplauncher-pilot/src/main/java/org/oplauncher/op/reflection/: AppletMethodProxy.java  AppletReflection.java  InterpretMethodDef.java  InterpretMethodProcessor.java
oplauncher-pilot/src/main/java/org/oplauncher/res/: FileResource.java  HttpSessionResourceRequest.java  IResourceRequest.java  ResourceRequestFactory.java  ResourceType.java  URLUtils.java
oplauncher-pilot/src/main/java/org/oplauncher/runtime/: AppletContextFactory.java  AppletContextType.java  AppletController.java  AppletControllerFactory.java  AppletOPDispatcher.java  AppletRegistry.java  CustomAppletStub.java  DefaultAppletContext.java  DefaultAppletController.java  JavaConsole.java  JavaConsoleBuilder.java  OPLauncherConfig.java  SWTJavaConsole.java  SWTJavaConsoleMonitor.java  SwingJavaConsole.java
oplauncher-pilot/src/main/java/org/oplauncher/runtime/secur/: CipherOPMessage3DESProcessor.java  OPCipherProcessor.java  OPCipherType.java  PayloadParserSecurityHelper.java  SecurityManager.java
oplauncher-pilot/src/main/resources/: CONSOLE_TEXT  VERSION  config.properties
oplauncher-pilot/src/test/java/org/oplauncher/: AppletClassLoaderTest.java  ConfigurationHelperTest.java
oplauncher-pilot/src/test/resources/: config.properties  testng.xml
oplauncher/config/: oplauncher.exe.ini
oplauncher/ui/: java_console.c  java_console.h  mac_java_console.h  mac_java_console.m  mac_splash.h  mac_splash.m  resource.h  resources.rc  splash.c  splash.h  win_java_console.c  win_java_console.h  win_splash.c  win_splash.h  win_tray_ctrl.c  win_tray_ctrl.h
tests/: applet-test-list.MD
tests/py/: gen_encrypted_payload.py  gen_ini_des3key_tkn.py  gen_test_payload.py  token_gen.py
